test/functional/Sema/enum_case_value_non_literal.glu
//
// RUN: not gluc %s 2>&1 | FileCheck %s
//

// CHECK: error: enum case value must be an integer literal
enum Bad: Int {
    A = 1 + 1,
}
